# environmentConfigurator

./: .gitattributes  .gitignore  README.md  README_REFACTOR.md  install.sh  pyproject.toml  requirements.txt  uninstall.sh
.claude/: settings.local.json
backups/tmux-sessions/: tmux_resurrect_20251106T125800.txt  tmux_resurrect_20251106T131118.txt  tmux_resurrect_20251106T132625.txt  tmux_resurrect_20251106T134125.txt  tmux_resurrect_20251106T135629.txt  tmux_resurrect_20251106T174042.txt  tmux_resurrect_20251106T220018.txt  tmux_resurrect_20251106T224844.txt  tmux_resurrect_20251106T225222.txt  tmux_resurrect_20251106T225850.txt  tmux_resurrect_20251106T232905.txt  tmux_resurrect_20251106T235140.txt  tmux_resurrect_20251107T000640.txt  tmux_resurrect_20251107T002402.txt  tmux_resurrect_20251107T003905.txt  tmux_resurrect_20251107T005405.txt  tmux_resurrect_20251107T010906.txt  tmux_resurrect_20251107T012407.txt  tmux_resurrect_20251107T013908.txt  tmux_resurrect_20251107T020912.txt  tmux_resurrect_20251107T022412.txt  tmux_resurrect_20251107T040924.txt  tmux_resurrect_20251107T095511.txt  tmux_resurrect_20251107T102516.txt  tmux_resurrect_20251107T104017.txt  tmux_resurrect_20251107T105518.txt  tmux_resurrect_20251107T111019.txt  tmux_resurrect_20251107T114020.txt  tmux_resurrect_20251107T115520.txt  tmux_resurrect_20251107T121020.txt  tmux_resurrect_20251107T122523.txt  tmux_resurrect_20251107T124023.txt  tmux_resurrect_20251107T132528.txt  tmux_resurrect_20251107T135533.txt  tmux_resurrect_20251107T165549.txt  tmux_resurrect_20251107T171950.txt  tmux_resurrect_20251107T180453.txt  tmux_resurrect_20251107T183455.txt  tmux_resurrect_20251107T184955.txt  tmux_resurrect_20251107T190456.txt  (+95 more)
claude_configs/: ANALYSIS_RESULTS.md  CLAUDE.md  README.md  manage_configs.sh
claude_configs/analysis_scripts/: analyze_conversation_history.py  daily_analysis.py  run_analysis_if_inactive.sh
docs/: tmux-session-manager.md
dotfiles/: .bashrc  .gitconfig  .tmux.conf  .zshrc
gemini_configs/: INSTRUCTIONS.md  README.md  manage_configs.sh
gemini_configs/analysis_scripts/: analyze_conversation_history.py  daily_analysis.py  run_analysis_if_inactive.sh
scripts/: CRON_MANAGER_README.md  PYTHON_THEME_SWITCHER_README.md  README.md  THEME_SWITCHER_GUIDE.md  claude-token-monitor.py  cron-manager  install-ohmyzsh.sh  merge-bashrc-to-zshrc.py  tmux-session-manager.py  tmux-theme-switcher.py  tmux-theme-switcher.sh
src/environment_configurator/: __init__.py
src/environment_configurator/cli/: __init__.py  config_merger.py  main.py  session_manager.py  theme_switcher.py
src/environment_configurator/data/: themes.yaml
tests/: __init__.py  conftest.py  test_merge_bashrc_to_zshrc.py
tests/test_tmux/: __init__.py  test_theme_manager.py
tests/test_utils/: test_file_utils.py
tmux-theme-switcher/: tmux-theme-switcher.sh
(+17 files in other folders)
